Fixed the alignment issue of the weather details

--- a/src/css/SummaryCard.css
+++ b/src/css/SummaryCard.css
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  height: 10em;
   gap: 1rem;
 }
 .summary-items > div > p:nth-of-type(1) {
@@ -34,4 +35,10 @@
 }
 .summary-items > div > p:nth-of-type(2) img {
   width: 40%;
+}
+
+@media only screen and (max-width: 1024px) {
+  .summary-items > div {
+    height: auto;
+  }
 }
